archive/tank-royale/HackatonBot/bot-test.log
HackatonBot.java:3: error: cannot find symbol
import dev.robocode.tankroyale.botapi.Color;
                                     ^
  symbol:   class Color
  location: package dev.robocode.tankroyale.botapi
HackatonBot.java:22: error: cannot find symbol
        setBodyColor(Color.fromHex("FF6B35"));  // Orange body
                     ^
  symbol:   variable Color
  location: class HackatonBot
HackatonBot.java:23: error: cannot find symbol
        setTurretColor(Color.fromHex("004E89")); // Blue turret
                       ^
  symbol:   variable Color
  location: class HackatonBot
HackatonBot.java:24: error: cannot find symbol
        setRadarColor(Color.fromHex("F7B801"));  // Yellow radar
                      ^
  symbol:   variable Color
  location: class HackatonBot
HackatonBot.java:25: error: cannot find symbol
        setScanColor(Color.fromHex("00A5CF"));   // Cyan scan
                     ^
  symbol:   variable Color
  location: class HackatonBot
HackatonBot.java:26: error: cannot find symbol
        setBulletColor(Color.fromHex("FF0000"));  // Red bullets
                       ^
  symbol:   variable Color
  location: class HackatonBot
6 errors
error: compilation failed
